<resources>
    <string name="app_name">4SharedCars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="nombreusu">Nombre Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="foto">Foto</string>
    <string name="iniciarsesion">INICIAR SESIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="reserva">Reservar</string>
    <string name="ranking">Ranking</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="apellido">Apellido</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="_4sharedcar">4SharedCar</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="registro">REGISTRO</string>
    <string name="repetir_contrase_a">Repetir Contraseña:</string>
    <string name="puntos">Puntos CO2</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="gestion_ruta_vacio">No tienes rutas si quieres una ruta dale a añadir ruta</string>


</resources>