<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.IniciarSesion">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/iniciarsesion"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnInciarSesion"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:text="@string/iniciarsesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenaInicioSesion"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtNombreUsuarioInicioSesion"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/nombreusu"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtContrasenaInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/txtContrasenaInicioSesion"
        android:layout_width="309dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.002" />

    <Button
        android:id="@+id/btnOlvidoContrasenaIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/icons"
        android:text="Se me ha olvidado la contraseña"
        android:textColor="@color/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInciarSesion"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegistroIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/icons"
        android:text="Registrate en 4SharedCar"
        android:textColor="@color/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOlvidoContrasenaIniciarSesion"
        app:layout_constraintVertical_bias="0.122" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        tools:srcCompat="@drawable/icono" />

</androidx.constraintlayout.widget.ConstraintLayout>